--- a/style.css
+++ b/style.css
@@ -21,8 +21,15 @@ li {
 a {
   text-decoration: none;
   color: #fff;
+  transition: all 0.2s linear;
 }
 
+a:hover,
+main a:hover {
+  color: #bfddf9;
+}
+
+/* | HEADER Section | */
 header {
   height: 80px;
   padding: 20px 50px;
@@ -53,17 +60,26 @@ header .sx_nav {
   align-items: center;
 }
 
-.dx_nav .user_img {
+.dx_nav :nth-child(2) {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background: #186e93;
   margin: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3em;
+  color: #ffffff6e;
 }
 
-/* MAIN */
+/* | MAIN Section | */
+main {
+  height: calc(100vh - 170px);
+}
+
 .main_movie_container {
-  height: 600px;
+  height: 550px;
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: cover;
@@ -82,6 +98,159 @@ header .sx_nav {
   padding: 50px 100px;
 }
 
+.overlay {
+  position: relative;
+}
+
 .overlay .box {
   width: 50%;
+}
+
+.overlay .box ul {
+  margin: 20px 0;
+}
+
+.overlay .box ul li {
+  color: #8197a4;
+  margin-right: 10px;
+}
+
+.overlay .box p {
+  font-size: 1.1em;
+  line-height: 1.3;
+}
+
+.overlay .box .extra_info {
+  margin-top: 20px;
+  font-size: 1.1em;
+}
+
+.overlay .box .extra_info .row {
+  display: flex;
+  align-items: flex-end;
+}
+
+.overlay .box .extra_info .row h4 {
+  min-width: 120px;
+  color: #8197a4;
+  margin-right: 20px;
+}
+
+.overlay a {
+  color: #79b8f3;
+}
+
+.overlay .box .extra_info .row a {
+  text-transform: uppercase;
+}
+
+.overlay .box .buttons_container {
+  margin: 40px 0;
+  display: flex;
+  align-items: center;
+}
+
+.overlay .box .buttons_container .play_btn {
+  background: #186e93;
+  font-size: 1.2em;
+  padding: 26px 30px;
+  margin-right: 5px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  transition: all 0.2s linear;
+  cursor: pointer;
+}
+
+.overlay .box .buttons_container .play_btn:hover {
+  background: #1399de;
+}
+
+.overlay .box .buttons_container .play_btn::before {
+  content: "\f04b";
+  font-size: 1.2em;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 600;
+  margin-right: 10px;
+}
+
+.overlay .box .buttons_container .extra_btn {
+  max-width: 150px;
+  background: #425265;
+  font-size: 1.2em;
+  padding: 15px 20px;
+  margin-right: 15px;
+  border-radius: 5px;
+  transition: all 0.2s linear;
+  cursor: pointer;
+}
+
+.overlay .box .buttons_container .extra_btn:hover {
+  background: #566b84;
+}
+
+.overlay .box .buttons_container i {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+  background: #425265;
+  border-radius: 50%;
+  margin: 0 5px;
+  transition: all 0.2s linear;
+  cursor: pointer;
+}
+
+.overlay .box .buttons_container i:hover {
+  background: #566b84;
+}
+
+.overlay .box p:last-child {
+  color: #8197a4;
+}
+
+.overlay .share_container {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 100px;
+  bottom: 0;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+.overlay .share_container :last-child {
+  color: #79b8f3;
+}
+
+.overlay .share_container i {
+  margin: 0 10px;
+  opacity: 0.6;
+  transition: all 0.2s linear;
+}
+
+.overlay .share_container i:hover {
+  opacity: 1;
+}
+
+/* | FOOTER Section | */
+footer {
+  text-align: center;
+  height: 50px;
+  color: #8197a4;
+}
+
+footer a {
+  color: #79b8f3;
+}
+
+footer li {
+  margin-right: 20px;
+}
+
+footer img {
+  width: 100px;
+  margin-bottom: 10px;
 }
